--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="welcome">Welcome to CovidCache! The app that allows you to track your poossible exposures to COVID-19.</string>
     <string name="start_now">Start now</string>
     <string name="date_of_exposure">Date of Exposure</string>
+    <string name="three_days_unitl_symptoms">Three Days Until Symptoms</string>
+    <string name="start_day_of_quarantine">Start Day of Quarantine</string>
+    <string name="final_day_of_quarantine">Final Day of Quarantine</string>
 </resources>
